force-app/main/default/objects/Attribute__c/Attribute__c.object-meta.xml
<CustomObject>
    <description>Legacy data attribute</description>
    <label>Attribute</label>
    <nameField>
        <displayFormat>ATT-{00000}</displayFormat>
        <label>Attribute Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>