force-app/main/default/objects/Attribute__c/fields/Attribute_Date__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Date__c</fullName>
    <label>Attribute Date</label>
    <type>Date</type>
</CustomField>