force-app/main/default/objects/Attribute__c/fields/Attribute_Type__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Type__c</fullName>
    <label>Attribute Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>