force-app/main/default/objects/Attribute__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Attributes</relationshipLabel>
    <relationshipName>Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>