force-app/main/default/objects/Attribute__c/fields/Legacy_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>